noinst_HEADERS = asteroid.h \
	ballworm.h \
	base.h \
	bground.h \
	blackhole.h \
	effects.h \
	fmodexsoundsystem.h \
	gamecamera.h \
	game.h \
	hiscore.h \
	input.h \
	menu.h \
	movingobject.h \
	mp3stream.h \
	mpak.h \
	mpakogre.h \
	mushroom.h \
	object.h \
	objectsystem.h \
	oggstream.h \
	ogreapp.h \
	ogrelistener.h \
	openalchannelgroup.h \
	openalchannel.h \
	openalsoundsystem.h \
	player.h \
	playlist.h \
	scriptsystem.h \
	soundstream.h \
	soundsystem.h \
	streamplayer.h \
	tentacles.h \
	whirler.h \
	SimpleIni/ConvertUTF.c \
	SimpleIni/ConvertUTF.h \
	SimpleIni/SimpleIni.h

